Added an image column in the presentation list to show the type of presentation.

--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -11,6 +11,7 @@
  *	Removed the toolbar for presentations, and created a right click menu
 	instead.
  *	User can now delete a presentation.
+ *	Presentation type is now denoted by an icon in the list.
 
 == 0.1 ==
  *	Save slides to disk
