--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,10 +1,15 @@
 +------------------------------------+
 | ExpoSong                           |
-| Version 0.3 Beta                   |
+| Version 0.4 Beta                   |
 | Copyright (C) 2008 Fishhookweb.com |
 +------------------------------------+
 
 = Changelog =
+
+== 0.4 ==
+
+ * Author and copyright information on lyrics slide.
+ * Some help pages.
 
 == 0.3 ==
 
