--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,8 +1,8 @@
-+------------------------------------+
-| ExpoSong                           |
-| Version 0.5                        |
-| Copyright (C) 2008 Fishhookweb.com |
-+------------------------------------+
++-----------------------------------------+
+| ExpoSong                                |
+| Version 0.6                             |
+| Copyright (C) 2008-2009 Fishhookweb.com |
++-----------------------------------------+
 
 = Changelog =
 
@@ -10,7 +10,15 @@
 
  * Presentations can now be searched.
  * Disable menu items that can't be used.
-
+ * Slide timers make the slides move forward automatically. (Only one time for
+   now)
+ * You can import and export both schedules, or the whole library.
+ * Changed some icons.
+ * Some shortcuts have been simplified to single letters. More to come later.
+ * Bugs:
+   * Editing lyrics slides without titles.
+   * Images for slides no longer need to be in the data folder.
+ 
 == 0.5 ==
 
  * On-screen notifications, for nursury alerts, or any other reason.
