Fixing issue 74: Shortcuts for delete and some other minor fixes

--- a/share/exposong/i18n/de/de.po
+++ b/share/exposong/i18n/de/de.po
@@ -104,7 +104,7 @@ msgstr "Aus _Ablaufplan löschen"
 
 #: share/exposong/lib/exposong/application.py:195
 msgid "Previous Presentation"
-msgstr "Lieder-Präsentation"
+msgstr "Vorherige Präsentation"
 
 #: share/exposong/lib/exposong/application.py:197
 msgid "Previous Slide"
