Some string changes

--- a/share/exposong/i18n/de/de.po
+++ b/share/exposong/i18n/de/de.po
@@ -760,7 +760,7 @@ msgstr "_Text"
 
 #: share/exposong/lib/exposong/plugins/text.py:284
 msgid "Text Presentations"
-msgstr "Text-Präsentationenn"
+msgstr "Text-Präsentationen"
 
 #: share/exposong/lib/exposong/plugins/text.py:307
 msgid "Editing Slide"
