--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,11 @@
+exposong (0.7-2) lucid; urgency=low
+
+  * Removing unneeded dependency (gettext)
+
+ -- Samuel Mehrbrodt <s.mehrbrodt@gmail.com>  Tue, 14 Sep 2010 17:10:34 +0200
+
 exposong (0.7-1) unstable; urgency=low
 
   * Initial release
 
  -- Samuel Mehrbrodt <s.mehrbrodt@gmail.com>  Mon, 06 Sep 2010 18:36:01 +0200
- 
